[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/ThiefCar.gd" type="Script" id=1]
[ext_resource path="res://assets/IsoTruck/carRed6_007.png" type="Texture" id=2]
[ext_resource path="res://assets/IsoTruck/carRed6_011.png" type="Texture" id=3]
[ext_resource path="res://assets/IsoTruck/carRed6_002.png" type="Texture" id=4]
[ext_resource path="res://assets/IsoTruck/carRed6_005.png" type="Texture" id=5]
[ext_resource path="res://assets/IsoTruck/carRed6_001.png" type="Texture" id=6]
[ext_resource path="res://assets/IsoTruck/carRed6_008.png" type="Texture" id=7]
[ext_resource path="res://assets/IsoTruck/carRed6_000.png" type="Texture" id=8]
[ext_resource path="res://assets/IsoTruck/carRed6_006.png" type="Texture" id=9]
[ext_resource path="res://assets/effects/Smoke &amp; Fire.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sounds/engine-loop-1.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sounds/loop_0.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "e",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "n",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "ne",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "nw",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "s",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "se",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "sw",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "w",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

const float pi = 3.14156;

uniform float dist = 16.;
uniform float alpha : hint_range(0., 1.) = 1.;

void fragment() {
	vec2 backgroundUV = FRAGCOORD.xy * SCREEN_PIXEL_SIZE.xy;
	
	vec2 offsetR = vec2(dist * SCREEN_PIXEL_SIZE.x * cos(TIME * 2. * pi),        dist * SCREEN_PIXEL_SIZE.x * cos(TIME*0.7 * 2. * pi));
	vec2 offsetG = vec2(dist * SCREEN_PIXEL_SIZE.x * cos(1. + (TIME * 2. * pi)), dist * SCREEN_PIXEL_SIZE.x * cos(3. + (TIME*0.7 * 2. * pi)));
	vec2 offsetB = vec2(dist * SCREEN_PIXEL_SIZE.x * cos(TIME * 1.5 * pi),       dist * SCREEN_PIXEL_SIZE.x * cos(TIME*0.9 * 2. * pi));
	
	vec4 backColR = texture(SCREEN_TEXTURE, SCREEN_UV + offsetR);
	vec4 backColG = texture(SCREEN_TEXTURE, SCREEN_UV + offsetG);
	vec4 backColB = texture(SCREEN_TEXTURE, SCREEN_UV + offsetB);
	
	vec4 texCol = texture(TEXTURE, UV);
	
	COLOR = mix(texCol, texCol.a * vec4(backColR.r, backColG.g, backColB.b, 1.0), alpha);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/dist = 16.0
shader_param/alpha = 1.0

[node name="TheifCar" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 1 )
animation = "e"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="TrailEffect" type="CPUParticles2D" parent="."]
rotation = -1.57079
emitting = false
amount = 1
lifetime = 0.01
one_shot = true
texture = ExtResource( 10 )

[node name="MoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="InvisibilityEffect" type="CPUParticles2D" parent="."]
visible = false
material = SubResource( 4 )
emitting = false
amount = 1
lifetime = 0.01
one_shot = true

[node name="SpecialTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="SpecialSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="BoostSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="CaughtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="ChaseTimer" type="Timer" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="SpecialTimer" to="." method="_on_SpecialTimer_timeout"]
